test/types/records/lydia/offsetNotRecord-sync.good
offsetNotRecord-sync.chpl:2: error: Cannot call c_offsetof on type that is not a record
