test/types/records/lydia/offsetNotRecord-sync.chpl
use CPtr;
writeln(c_offsetof(sync int, "wrapped"));
